--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+/* ToDo view styles */
+.taskContainer {
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.toDoListViewContainer {
   display: flex;
   flex-direction: column;
+  height: 80vh;
+  justify-content: space-around;
+  align-items: center;
+}
+.tableContainer,
+.tableHeadings {
+  width: 80%;
+  justify-content: space-around;
+}
+.taskContainer,
+.tableHeadings {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.taskContainer > td,
+.tableHeadings > td {
+  width: 20%;
+}
+table {
+  border: 1px solid black;
+  min-height: 200px;
+}
+table td {
+  height: 50px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+table tr {
+  border-top: 1px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+/* Task component styles  */
+.taskForm {
+  display: flex;
+  flex-direction: column;
+  height: 15vh;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Common styles  */
+button {
+  padding: 10px;
+  width: 130px;
 }
